--- a/HTML_DZ_Module_11_12_week_9(3).html
+++ b/HTML_DZ_Module_11_12_week_9(3).html
@@ -45,7 +45,7 @@
 
 		<div class="row justify-content-center mt-5 ">
 				<div class="col-lg-2">
-					<h2 class="text-nowrap text-secondary">HOMEWORK</h2>
+					<h2 class="text-nowrap text-secondary font-weight-light">HOMEWORK</h2>
 				</div>
 			</div>
 
@@ -57,7 +57,6 @@
           <td scope="col"><small>Group</small></td>
           <td scope="col"><small>Subject</small></td>
           <td scope="col"></td>
-
         </tr>
       </thead>
       <tbody>
@@ -100,198 +99,142 @@
       <thead class="bg-info text-white" style="filter: opacity(30%);">
         <tr>
           <th scope="col">#</th>
-          <th scope="col" >Name</th>
-          <th scope="col">GPA</th>
-          <th scope="col">Is present</th>
-          <th scope="col">Test</th>
-          <th scope="col">Classwork</th>
-          <th scope="col">Comment</th>
+          <th scope="col" >Student</th>
+          <th scope="col">18.04</th>
+          <th scope="col">14.04</th>
+          <th scope="col">12.04</th>
+          <th scope="col">10.04</th>
         </tr>
       </thead>
       <tbody>
         <tr>
           <th scope="row ">1</th>
           <td class="align-middle">Valentin Scott</td>
-          <td class="align-middle">10</td>
-          <td class="align-middle">
-            <div class="form-check form-check-inline ">
-              <input class="form-check-input "  type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-              <label class="form-check-label" for="inlineRadio1"></label>
+          <td class="">
+            <div class="d-flex">
+              <img src="pic/file-code-solid.svg"  alt="file" class="mt-1" width="33px" height="33px">
+              <form>
+                <div class="form-group   mb-auto " style="width:80px;">
+                  <select id="inputState" class="form-control">
+                    <option selected>-</option>
+                    <option>12</option>
+                    <option>1</option>
+                  </select>
+                </div>
+              </form>
             </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-              <label class="form-check-label" for="inlineRadio2"></label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" >
-              <label class="form-check-label" for="inlineRadio3"></label>
+          </td>
+          <td class="">
+            <img src="pic/window-minimize-solid.svg"  alt="line" class="mb-2 " width="33" height="33">
+          </td>
+          <td>
+            <div class="d-flex">
+              <img src="pic/file-code-solid.svg"  alt="file" class="m-1" width="33" height="33">
+              <form>
+                <div class="form-group   mb-auto " style="width:80px;">
+                  <select id="inputState" class="form-control">
+                    <option selected>12</option>
+                    <option>6</option>
+                    <option>1</option>
+                  </select>
+                </div>
+              </form>
             </div>
           </td>
           <td>
-            <form>
-              <div class="form-group   mb-auto " style="width:80px;">
-                <select id="inputState" class="form-control">
-                  <option selected>-</option>
-                  <option>12</option>
-                  <option>1</option>
-                </select>
-              </div>
-            </form>
-          </td>
-          <td>
-            <form>
-              <div class="form-group mb-auto  " style="width:80px;">
-                <select id="inputState" class="form-control">
-                  <option selected>-</option>
-                  <option>...</option>
-                </select>
-              </div>
-            </form>
-          </td>
-          <td>
-            <form>
-              <div class="form-group mb-auto">
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
-              </div>
-            </form>
+            <img src="pic/window-minimize-solid.svg"  alt="line" class="mb-2" width="33" height="33">
           </td>
         </tr>
         <tr>
           <th scope="row">2</th>
           <td class="align-middle">Donald Trump</td>
-          <td class="align-middle">9</td>
           <td class="align-middle">
-            <div class="form-check form-check-inline ">
-              <input class="form-check-input border-success" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-              <label class="form-check-label" for="inlineRadio1"></label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-              <label class="form-check-label" for="inlineRadio2"></label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" >
-              <label class="form-check-label" for="inlineRadio3"></label>
+            <img src="pic/window-minimize-solid.svg"  alt="line" class="mb-2" width="33" height="33">
+          </td>
+          <td class="align-middle">
+            <div class="d-flex">
+              <img src="pic/file-code-solid.svg"  alt="file" class="mt-1" width="33px" height="33px">
+              <form>
+                <div class="form-group   mb-auto " style="width:80px;">
+                  <select id="inputState" class="form-control">
+                    <option selected>11</option>
+                    <option>12</option>
+                    <option>1</option>
+                  </select>
+                </div>
+              </form>
             </div>
           </td>
           <td>
-            <form>
-              <div class="form-group   mb-auto " style="width:80px;">
-                <select id="inputState" class="form-control">
-                  <option selected>-</option>
-                  <option>...</option>
-                </select>
-              </div>
-            </form>
+            <img src="pic/window-minimize-solid.svg"  alt="line" class="mb-2" width="33" height="33">
           </td>
           <td>
-            <form>
-              <div class="form-group mb-auto " style="width:80px;">
-                <select id="inputState" class="form-control">
-                  <option selected>-</option>
-                  <option>...</option>
-                </select>
-              </div>
-            </form>
-          </td>
-          <td>
-            <form>
-              <div class="form-group mb-auto">
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
-              </div>
-            </form>
+            <div class="d-flex">
+              <img src="pic/file-code-solid.svg"  alt="file" class="mt-1" width="33px" height="33px">
+              <form>
+                <div class="form-group   mb-auto " style="width:80px;">
+                  <select id="inputState" class="form-control">
+                    <option selected>12</option>
+                    <option>12</option>
+                    <option>1</option>
+                  </select>
+                </div>
+              </form>
+            </div>
           </td>
         </tr>
         <tr>
           <th scope="row">3</th>
           <td class="align-middle">Vail Davis</td>
-          <td class="align-middle">11</td>
           <td class="align-middle">
-            <div class="form-check form-check-inline ">
-              <input class="form-check-input border-success" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-              <label class="form-check-label" for="inlineRadio1"></label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-              <label class="form-check-label" for="inlineRadio2"></label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" >
-              <label class="form-check-label" for="inlineRadio3"></label>
-            </div>
+            <img src="pic/window-minimize-solid.svg"  alt="line" class="mb-2" width="33" height="33">
+          </td>
+          <td class="align-middle">
+            <img src="pic/window-minimize-solid.svg"  alt="line" class="mb-2" width="33" height="33">
           </td>
           <td>
-            <form>
-              <div class="form-group   mb-auto " style="width:80px;">
-                <select id="inputState" class="form-control">
-                  <option selected>-</option>
-                  <option>...</option>
-                </select>
-              </div>
-            </form>
+            <img src="pic/window-minimize-solid.svg"  alt="line" class="mb-2" width="33" height="33">
           </td>
           <td>
-            <form>
-              <div class="form-group mb-auto " style="width:80px;">
-                <select id="inputState" class="form-control">
-                  <option selected>-</option>
-                  <option>...</option>
-                </select>
-              </div>
-            </form>
-          </td>
-          <td>
-            <form>
-              <div class="form-group mb-auto">
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
-              </div>
-            </form>
+            <img src="pic/window-minimize-solid.svg"  alt="line" class="mb-2" width="33" height="33">
           </td>
         </tr>
         <tr>
           <th scope="row">4</th>
           <td class="align-middle">Truman Clark</td>
-          <td class="align-middle">8</td>
           <td class="align-middle">
-            <div class="form-check form-check-inline ">
-              <input class="form-check-input border-success" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
-              <label class="form-check-label" for="inlineRadio1"></label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
-              <label class="form-check-label" for="inlineRadio2"></label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" >
-              <label class="form-check-label" for="inlineRadio3"></label>
+            <img src="pic/window-minimize-solid.svg"  alt="line" class="mb-2" width="33" height="33">
+          </td>
+          <td class="align-middle">
+            <img src="pic/window-minimize-solid.svg"  alt="line" class="mb-2" width="33" height="33">
+          </td>
+          <td>
+            <div class="d-flex">
+              <img src="pic/file-code-solid.svg"  alt="file" class="m-1" width="33" height="33">
+              <form>
+                <div class="form-group   mb-auto " style="width:80px;">
+                  <select id="inputState" class="form-control">
+                    <option selected>9</option>
+                    <option>6</option>
+                    <option>1</option>
+                  </select>
+                </div>
+              </form>
             </div>
           </td>
           <td>
-            <form>
-              <div class="form-group   mb-auto " style="width:80px;">
-                <select id="inputState" class="form-control">
-                  <option selected>-</option>
-                  <option>...</option>
-                </select>
-              </div>
-            </form>
-          </td>
-          <td>
-            <form>
-              <div class="form-group mb-auto " style="width:80px;">
-                <select id="inputState" class="form-control">
-                  <option selected>-</option>
-                  <option>...</option>
-                </select>
-              </div>
-            </form>
-          </td>
-          <td>
-            <form>
-              <div class="form-group mb-auto">
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
-              </div>
-            </form>
+            <div class="d-flex">
+              <img src="pic/file-code-solid.svg"  alt="file" class="m-1" width="33" height="33">
+              <form>
+                <div class="form-group   mb-auto " style="width:80px;">
+                  <select id="inputState" class="form-control">
+                    <option selected>10</option>
+                    <option>6</option>
+                    <option>1</option>
+                  </select>
+                </div>
+              </form>
+            </div>
           </td>
         </tr>
       </tbody>
