begin HTML_DZ_Module_12_(2).html

--- a/HTML_DZ_Module_12_(1).html
+++ b/HTML_DZ_Module_12_(1).html
@@ -23,13 +23,13 @@
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link text-white-50" href="#"><h4>Home</h4><span class="sr-only">(current)</span></a>
+            <a class="nav-link text-white" href="#"><h4>Home</h4><span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-white-50" href="#"><h4>Homework</h4></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="#"><h4>Setting</h4></a>
+            <a class="nav-link text-white-50" href="#"><h4>Setting</h4></a>
           </li>
         </ul>
 
@@ -47,77 +47,114 @@
 
     <div class="row container-fluid">
       <div class="col-6">
-        <div class="row justify-content-center mt-3 mb-3">
+        <div class="row justify-content-center mt-5 mb-3">
           <div class="col-lg-2">
             <h2 class="text-nowrap text-secondary font-weight-light">News</h2>
           </div>
         </div>
 
         <div class="d-flex flex-row border mt-5 p-3" >
-          <img src="pic/calendar.svg" class="" alt="calendar" width="25%" height="25%">
+          <img src="pic/calendar.svg" class="" alt="calendar" width="18%" height="18%">
           <div class="p-3" style="width:auto; ">
             <h5 class=""><span>Weekends</span><small class="float-right">1 day ago</small></h5>
             <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus
                ipsum in vulputate sollicitudin. Fusce scelerisque nec leo sit amet venenatis.
-                Aliquam consectetur maximus velit, non rutrum velit consectetur eget. Sed
-                porttitor hendrerit lacus ut elementum. Nunc faucibus ut felis nec gravida.
-                 Aliquam auctor est in orci mattis varius. </p>
+                Aliquam consectetur maximus velit. </p>
           </div>
         </div>
 
-        <div class="d-flex flex-row border mt-5 p-3">
+        <div class="d-flex flex-row border  p-3">
           <div class="p-3" style="width:auto; ">
             <h5 class=""><span>Programming consultations</span><small class="float-right">3 day ago</small></h5>
-            <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus
-               ipsum in vulputate sollicitudin. Fusce scelerisque nec leo sit amet venenatis.
-                Aliquam consectetur maximus velit, non rutrum velit consectetur eget. Sed
-                porttitor hendrerit lacus ut elementum. Nunc faucibus ut felis nec gravida.
-                 Aliquam auctor est in orci mattis varius. </p>
+            <p class="">Programming consultations Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus
+               ipsum in vulputate sollicitudin.Fusce scelerisque nec leo sit amet venenatis.
+                Aliquam consectetur maximus velit sollicitudin.Fusce scelerisque nec leo sit amet.  </p>
           </div>
         </div>
 
-        <div class="d-flex flex-row border mt-5 p-3" >
-          <img src="pic/mobile-banking.svg" class="" alt="calendar" width="25%" height="25%">
+        <div class="d-flex flex-row border  p-3" >
+          <img src="pic/mobile-banking.svg" class="" alt="calendar" width="15%" height="15%">
           <div class="p-3" style="width:auto; ">
             <h5 class=""><span>Meeting with ABC Bank</span><small class="float-right">20.03.2019</small></h5>
             <p class="">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus
-               ipsum in vulputate sollicitudin. Fusce scelerisque nec leo sit amet venenatis.
-                Aliquam consectetur maximus velit, non rutrum velit consectetur eget. Sed
-                porttitor hendrerit lacus ut elementum. Nunc faucibus ut felis nec gravida.
-                 Aliquam auctor est in orci mattis varius. </p>
+               ipsum in vulputate sollicitudin.  </p>
           </div>
         </div>
-
+        <button type="button" class="btn btn-secondary btn-lg btn-block mt-3">MORE</button>
       </div>
+
       <div class="col-6">
-        <div class="row justify-content-center mt-3 mb-3">
+        <div class="row justify-content-center mt-5 mb-3">
           <div class="col-lg-2">
             <h2 class="text-nowrap text-secondary font-weight-light">Rewards</h2>
           </div>
         </div>
 
-        <table class="table table-borderless">
+        <table class="table table-borderless align-middle" >
+          <tbody>
+              <td style="width:40%;   " class="text-right pb-0"  ><p style="border-radius: 0 50px  50px 0;" class="border d-inline   pb-1 pt-1 pl-3 pr-3 align-middle">Class attended</p></td>
+              <td style="width:15%; "><div class="d-flex flex-row justify-content-center pb-2">
+                <span class="font-weight-bold"><h2>+1</h2></span><img src="pic/medal.svg" class="" alt="medal" width="35%" height="35%">
+              </div></td>
+              <td style="width:40%; "><p style="border-radius: 50px 0 0 50px;" class="border d-inline pb-1 pt-1 pl-3 pr-3 ml-auto align-middle">20.04.2020</p></td>
+            </tr>
+            <tr>
+              <td style="width:40%;   " class="text-right"><p style="border-radius: 0 50px  50px 0;" class="border d-inline   pb-1 pt-1 pl-3 pr-3 align-middle">19.04.2020</p></td>
+              <td style="width:15%; "><div class="d-flex flex-row justify-content-center">
+                <span class="font-weight-bold"><h2>+1</h2></span><img src="pic/medal.svg" class="" alt="medal" width="35%" height="35%">
+              </div></td>
+              <td style="width:40%; "><p style="border-radius: 50px 0 0 50px;" class="border d-inline pb-1 pt-1 pl-3 pr-3 ml-auto align-middle">Class attended</p></td>
+            </tr>
+            <tr>
+              <td style="width:40%;   " class="text-right"><p style="border-radius: 0 50px  50px 0;" class="border d-inline   pb-1 pt-1 pl-3 pr-3 align-middle">Class attended</p></td>
+              <td style="width:15%; "><div class="d-flex flex-row justify-content-center">
+                <span class="font-weight-bold"><h2>+1</h2></span><img src="pic/medal.svg" class="" alt="medal" width="35%" height="35%">
+              </div></td>
+              <td style="width:40%; "><p style="border-radius: 50px 0 0 50px;" class="border d-inline pb-1 pt-1 pl-3 pr-3 ml-auto align-middle">18.04.2020</p></td>
+            </tr>
+            <tr>
+              <td style="width:40%;   " class="text-right"><p style="border-radius: 0 50px  50px 0;" class="border d-inline   pb-1 pt-1 pl-3 pr-3 align-middle">17.04.2020</p></td>
+              <td style="width:15%; "><div class="d-flex flex-row justify-content-center">
+                <span class="font-weight-bold"><h2>+1</h2></span><img src="pic/medal.svg" class="" alt="medal" width="35%" height="35%">
+              </div></td>
+              <td style="width:40%; "><p style="border-radius: 50px 0 0 50px;" class="border d-inline pb-1 pt-1 pl-3 pr-3 ml-auto align-middle">Class attended</p></td>
+            </tr>
+            <tr>
+              <td style="width:40%;   " class="text-right"><p style="border-radius: 0 50px  50px 0;" class="border d-inline   pb-1 pt-1 pl-3 pr-3 align-middle">Class attended</p></td>
+              <td style="width:15%; "><div class="d-flex flex-row justify-content-center">
+                <span class="font-weight-bold"><h2>+1</h2></span><img src="pic/medal.svg" class="" alt="medal" width="35%" height="35%">
+              </div></td>
+              <td style="width:40%; "><p style="border-radius: 50px 0 0 50px;" class="border d-inline pb-1 pt-1 pl-3 pr-3 ml-auto align-middle">16.04.2020</p></td>
+            </tr>
+            <tr>
+              <td style="width:40%;   " class="text-right"><p style="border-radius: 0 50px  50px 0;" class="border d-inline   pb-1 pt-1 pl-3 pr-3 align-middle">15.04.2020</p></td>
+              <td style="width:15%; "><div class="d-flex flex-row justify-content-center">
+                <span class="font-weight-bold"><h2>+1</h2></span><img src="pic/medal.svg" class="" alt="medal" width="35%" height="35%">
+              </div></td>
+              <td style="width:40%; "><p style="border-radius: 50px 0 0 50px;" class="border d-inline pb-1 pt-1 pl-3 pr-3 ml-auto align-middle">Class attended</p></td>
+            </tr>
+            <tr>
+              <td style="width:40%;   " class="text-right"><p style="border-radius: 0 50px  50px 0;" class="border d-inline   pb-1 pt-1 pl-3 pr-3 align-middle">Class attended</p></td>
+              <td style="width:15%; "><div class="d-flex flex-row justify-content-center">
+                <span class="font-weight-bold"><h2>+1</h2></span><img src="pic/medal.svg" class="" alt="medal" width="35%" height="35%">
+              </div></td>
+              <td style="width:40%; "><p style="border-radius: 50px 0 0 50px;" class="border d-inline pb-1 pt-1 pl-3 pr-3 ml-auto align-middle">14.04.2020</p></td>
+            </tr>
+            <tr>
+              <td style="width:40%;   " class="text-right"><p style="border-radius: 0 50px  50px 0;" class="border d-inline   pb-1 pt-1 pl-3 pr-3 align-middle">13.04.2020</p></td>
+              <td style="width:15%; "><div class="d-flex flex-row justify-content-center">
+                <span class="font-weight-bold"><h2>+1</h2></span><img src="pic/medal.svg" class="" alt="medal" width="35%" height="35%">
+              </div></td>
+              <td style="width:40%; "><p style="border-radius: 50px 0 0 50px;" class="border d-inline pb-1 pt-1 pl-3 pr-3 ml-auto align-middle">Class attended</p></td>
+            </tr>
 
-  <tbody>
-    <tr>
-      <td style="width:40%;   " class="text-right"><p class="border d-inline   pb-1 pt-1 pl-3 pr-3 ">Class attended</p></td>
-      <td style="width:15%; "><div class="d-flex flex-row justify-content-center">
-        <span class="font-weight-bold">+1</span><img src="pic/medal.svg" class="" alt="medal" width="40" height="40">
-      </div></td>
-      <td style="width:40%; "><p class="border d-inline pb-1 pt-1 pl-3 pr-3 ml-auto ">20.04.2020</p></td>
-    </tr>
-    <tr>
-      <td style="width:40%;   " class="text-right"><p class="border d-inline   pb-1 pt-1 pl-3 pr-3">19.04.2020</p></td>
-      <td style="width:15%; "><div class="d-flex flex-row justify-content-center">
-        <span class="font-weight-bold">+1</span><img src="pic/medal.svg" class="" alt="medal" width="40" height="40">
-      </div></td>
-      <td style="width:40%; "><p class="border d-inline pb-1 pt-1 pl-3 pr-3 ml-auto ">Class attended</p></td>
-    </tr>
-
-  </tbody>
-</table>
-        </div>
+          </tbody>
+        </table>
+        <button type="button" class="btn btn-light btn-lg btn-block mt-3">MORE</button>
+      </div>
     </div>
+
+  
 
 
     <!-- Optional JavaScript -->
