COMPLIT HTML_DZ_Module_12

--- a/HTML_DZ_Module_12_(1).html
+++ b/HTML_DZ_Module_12_(1).html
@@ -15,11 +15,13 @@
     <title>HTML_DZ_Module_12</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary text-white">
+    <nav class="navbar navbar-expand-lg navbar-light  text-white" style="background:#245080;">
       <a class="navbar-brand ml-5 mr-5" href="#">
         <img src="pic/user.svg" alt="student" width="50" height="50" class="">
       </a>
-
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
@@ -154,7 +156,7 @@
       </div>
     </div>
 
-  
+
 
 
     <!-- Optional JavaScript -->
