--- a/HTML_DZ_Module_12_(2).html
+++ b/HTML_DZ_Module_12_(2).html
@@ -12,14 +12,16 @@
         font-size: 18px;
       }
     </style>
-    <title>HTML_DZ_Module_12</title>
+    <title>HTML_DZ_Module_12_2</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-primary text-white">
+    <nav class="navbar navbar-expand-lg navbar-light  text-white" style="background:#245080;">
       <a class="navbar-brand ml-5 mr-5" href="#">
         <img src="pic/user.svg" alt="student" width="50" height="50" class="">
       </a>
-
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
       <div class="collapse navbar-collapse" id="navbarText">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
@@ -41,58 +43,185 @@
 
 <div class="row container-fluid mt-4 pl-5 pr-5 border-bottom">
   <div class="col-4">
-    <h2 class="text-secondary mt-5 pt-5">JavaScript</h2>
+    <h2 class="text-secondary mt-5 pt-5 font-weight-normal">JavaScript</h2>
   </div>
   <div class="col-4">
-    <h1 class="text-secondary text-center">Homework</h1>
+    <h1 class="text-secondary text-center font-weight-normal">Homework</h1>
   </div>
   <div class="col-4 text-right">
     <div class="d-inline-flex flex-column align-items-end">
-      <div class="d-flex flex-row align-items-center"><span>current - </span><p class="rounded-circle ml-1 mb-0" style="width:20px; height:20px; border:1px solid grey; background:white;" ></p></div>
-      <div class="d-flex flex-row align-items-center"><span>reviewed - </span><p class="rounded-circle ml-1 mb-0" style="width:20px; height:20px; border:1px solid #28A745; background:#28A745;" ></p></div>
-      <div class="d-flex flex-row align-items-center"><span>under review - </span><p class="rounded-circle ml-1 mb-0" style="width:20px; height:20px; border:1px solid #007BFF;; background:#007BFF;" ></p></div>
-      <div class="d-flex flex-row align-items-center"><span>overdue - </span><p class="rounded-circle ml-1 mb-0" style="width:20px; height:20px; border:1px solid #DC3545; background:#DC3545;" ></p></div>
+      <div class="d-flex flex-row align-items-center"><span>current - </span><p class="rounded-circle ml-1 mb-0" style="width:20px; height:20px; border:1px solid grey; background:#F8F9FA;" ></p></div>
+      <div class="d-flex flex-row align-items-center"><span>reviewed - </span><p class="rounded-circle ml-1 mb-0" style="width:20px; height:20px; border:1px solid #28A745; background:#28A745; opacity:.75;" ></p></div>
+      <div class="d-flex flex-row align-items-center"><span>under review - </span><p class="rounded-circle ml-1 mb-0" style="width:20px; height:20px; border:1px solid #17A2B8; background:#17A2B8;" ></p></div>
+      <div class="d-flex flex-row align-items-center"><span>overdue - </span><p class="rounded-circle ml-1 mb-0" style="width:20px; height:20px; border:1px solid #ed8094; background:#ed8094;" ></p></div>
     </div>
+  </div>
+</div>
+
+<div class="row container-fluid mt-4 pl-5 pr-5 rounded-lg">
+  <div class="col-4">
+    <div class=" border bg-light  pl-4 pr-4 pt-4 pb-2">
+        <h5 class=""><span>Loops</span></h5>
+        <p class="">10/05/2020  </p>
+        <div class="custom-file p-4">
+          <input type="file" class="custom-file-input" id="customFile">
+          <label class="custom-file-label" for="customFile">Choose file</label>
+
+      </div>
+    </div>
+  </div>
+  <div class="col-4">
+    <div class=" border bg-info text-white  pl-4 pr-4 pt-4 pb-2 rounded-lg" style=" opacity:.75;">
+        <h5 class=""><span>Conditional statements</span></h5>
+        <p class="">8/05/2020  </p>
+        <div class="btn-group pl-1 pr-1 pt-2 pb-2" style="width:100%; " role="group"  aria-label="Basic example">
+          <button type="button"   class="btn bg-info d-block text-white border-white">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-download mr-2" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+              <path fill-rule="evenodd" d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+            </svg> Your file
+          </button>
+          <button type="button"  class="btn bg-info d-block text-white border-white">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash-fill mr-2" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z"/>
+            </svg> Remove
+          </button>
+        </div>
+    </div>
+  </div>
+  <div class="col-4 ">
+    <div class=" border bg-info text-white  pl-4 pr-4 pt-4 pb-2 rounded-lg" style=" opacity:.75;">
+        <h5 class=""><span>Variables</span></h5>
+        <p class="">5/05/2020  </p>
+        <div class="btn-group pl-1 pr-1 pt-2 pb-2" style="width:100%; " role="group"  aria-label="Basic example">
+          <button type="button"   class="btn bg-info d-block text-white border-white">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-download mr-2" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+              <path fill-rule="evenodd" d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+            </svg> Your file
+          </button>
+          <button type="button"  class="btn bg-info d-block text-white border-white">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash-fill mr-2" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M2.5 1a1 1 0 0 0-1 1v1a1 1 0 0 0 1 1H3v9a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V4h.5a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H10a1 1 0 0 0-1-1H7a1 1 0 0 0-1 1H2.5zm3 4a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5zM8 5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7A.5.5 0 0 1 8 5zm3 .5a.5.5 0 0 0-1 0v7a.5.5 0 0 0 1 0v-7z"/>
+            </svg> Remove
+          </button>
+        </div>
+    </div>
+  </div>
+</div>
+
+<div class="row container-fluid  pl-5 pr-5 border-bottom">
+  <div class="col-12">
+    <h2 class="text-secondary mt-5 pt-5 font-weight-normal">HTML & CSS</h2>
   </div>
 </div>
 
 <div class="row container-fluid mt-4 pl-5 pr-5 ">
   <div class="col-4">
-    <div class="d-flex flex-row border  p-3">
-      <div class="p-3" style="width:auto; ">
-        <h5 class=""><span>Programming consultations</span><small class="float-right">3 day ago</small></h5>
-        <p class="">Programming consultations Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus
-           ipsum in vulputate sollicitudin.Fusce scelerisque nec leo sit amet venenatis.
-            Aliquam consectetur maximus velit sollicitudin.Fusce scelerisque nec leo sit amet.  </p>
+    <div class=" border   pl-4 pr-4 pt-4 pb-2 rounded-lg text-white" style="background:#ed8094; opacity:.9;">
+        <h5 class=""><span>Adaptive layout</span></h5>
+        <p class="">29/04/2020  </p>
+        <div class="custom-file p-4">
+          <input type="file" class="custom-file-input" id="customFile">
+          <label class="custom-file-label" for="customFile">Choose file</label>
+
       </div>
     </div>
   </div>
   <div class="col-4">
-    <div class="d-flex flex-row border  p-3">
-      <div class="p-3" style="width:auto; ">
-        <h5 class=""><span>Loops</span></h5>
-        <p class="">10/05/2020  </p>
-        <form class="was-validated" action="index.html" method="post">
-          <div class="input-group ">
-            <div class="custom-file">
-              <input type="file" class="custom-file-input" id="validatedInputGroupCustomFile" >
-              <label class="custom-file-label" for="validatedInputGroupCustomFile">Choose file...</label>
-            </div>
-          </div>
+    <div class=" border   pl-4 pr-4 pt-4 pb-2 rounded-lg text-white" style="background:#ed8094; opacity:.9;">
+        <h5 class=""><span>Grid layuot</span></h5>
+        <p class="">27/04/2020  </p>
+        <div class="custom-file p-4">
+          <input type="file" class="custom-file-input" id="customFile">
+          <label class="custom-file-label" for="customFile">Choose file</label>
 
-
-        </form>
       </div>
     </div>
   </div>
   <div class="col-4 ">
-    <div class="d-flex flex-row border  p-3">
-      <div class="p-3" style="width:auto; ">
-        <h5 class=""><span>Programming consultations</span><small class="float-right">3 day ago</small></h5>
-        <p class="">Programming consultations Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus
-           ipsum in vulputate sollicitudin.Fusce scelerisque nec leo sit amet venenatis.
-            Aliquam consectetur maximus velit sollicitudin.Fusce scelerisque nec leo sit amet.  </p>
-      </div>
+    <div class=" border bg-success text-white  pl-4 pr-4 pt-4 pb-2 rounded-lg" style=" opacity:.75;">
+        <h5 class=""><span>Flexbox</span><small class="float-right rounded-pill text-white pl-2 pr-2" style="background:#136629">11</small></h5>
+        <p class="">24/04/2020  </p>
+        <div class="btn-group pl-1 pr-1 pt-2 pb-2" style="width:100%; " role="group"  aria-label="Basic example">
+          <button type="button"   class="btn bg-success d-block text-white border-white">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-download mr-2" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+              <path fill-rule="evenodd" d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+            </svg> Your file
+          </button>
+          <button type="button"  class="btn bg-success d-block text-white border-white">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-clockwise mr-2" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z"/>
+              <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466z"/>
+            </svg> Resend
+          </button>
+        </div>
+    </div>
+  </div>
+</div>
+
+<div class="row container-fluid mt-4 pl-5 pr-5 ">
+  <div class="col-4 ">
+    <div class=" border bg-success text-white  pl-4 pr-4 pt-4 pb-2 rounded-lg" style=" opacity:.75;">
+        <h5 class=""><span>Animations</span><small class="float-right rounded-pill text-white pl-2 pr-2" style="background:#136629">10</small></h5>
+        <p class="">20/04/2020  </p>
+        <div class="btn-group pl-1 pr-1 pt-2 pb-2" style="width:100%; " role="group"  aria-label="Basic example">
+          <button type="button"   class="btn bg-success d-block text-white border-white">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-download mr-2" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+              <path fill-rule="evenodd" d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+            </svg> Your file
+          </button>
+          <button type="button"  class="btn bg-success d-block text-white border-white">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-clockwise mr-2" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z"/>
+              <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466z"/>
+            </svg> Resend
+          </button>
+        </div>
+    </div>
+  </div>
+
+  <div class="col-4 ">
+    <div class=" border bg-success text-white  pl-4 pr-4 pt-4 pb-2 rounded-lg" style=" opacity:.75;">
+        <h5 class=""><span>Forms</span><small class="float-right rounded-pill text-white pl-2 pr-2" style="background:#136629">10</small></h5>
+        <p class="">18/04/2020  </p>
+        <div class="btn-group pl-1 pr-1 pt-2 pb-2" style="width:100%; " role="group"  aria-label="Basic example">
+          <button type="button"   class="btn bg-success d-block text-white border-white">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-download mr-2" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+              <path fill-rule="evenodd" d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+            </svg> Your file
+          </button>
+          <button type="button"  class="btn bg-success d-block text-white border-white">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-clockwise mr-2" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z"/>
+              <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466z"/>
+            </svg> Resend
+          </button>
+        </div>
+    </div>
+  </div>
+
+  <div class="col-4 ">
+    <div class=" border bg-success text-white  pl-4 pr-4 pt-4 pb-2 rounded-lg" style=" opacity:.75;">
+        <h5 class=""><span>Tables</span><small class="float-right rounded-pill text-white pl-2 pr-2" style="background:#136629">12</small></h5>
+        <p class="">17/04/2020  </p>
+        <div class="btn-group pl-1 pr-1 pt-2 pb-2" style="width:100%; " role="group"  aria-label="Basic example">
+          <button type="button"   class="btn bg-success d-block text-white border-white">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-download mr-2" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
+              <path fill-rule="evenodd" d="M7.646 11.854a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V1.5a.5.5 0 0 0-1 0v8.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3z"/>
+            </svg> Your file
+          </button>
+          <button type="button"  class="btn bg-success d-block text-white border-white">
+            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-clockwise mr-2" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z"/>
+              <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466z"/>
+            </svg> Resend
+          </button>
+        </div>
     </div>
   </div>
 </div>
